Creazione sezioni del main

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <!-- First section -->
 
         <section class="section-1">
+
             <div class="center container-1">
                 <h1>Tutto ciò che ti serve per il
                     lavoro, in un unico posto</h1>
@@ -66,6 +67,7 @@
                     </div>
                 </div>
             </div>
+
         </section>
 
         <!-- Second section -->
@@ -318,6 +320,7 @@
 
                 </div>
             </div>
+
         </section>
 
         <!-- Third section -->
@@ -344,13 +347,14 @@
                         <button class="button-blue">Contatta l'ufficio vendite</button>
                     </div>
                 </div>
-
             </div>
+
         </section>
 
         <!-- Fourth section -->
 
         <section class="section-4">
+
             <div class="center container-size container-4 flex flex-between">
                 <div class="card-left">
                     <img src="./assets/img/partner.png" alt="partner">
@@ -365,6 +369,142 @@
                     <button class="button-white margin-top">Trova un partner</button>
                 </div>
             </div>
+
+        </section>
+
+        <!-- Fifth section -->
+
+        <section class="section-5">
+
+            <div class="center container-size container-5">
+
+                <h2 class="padding-top">Esegui più operazioni con Dropbox Business</h2>
+                <div class="boxes flex flex-between small-font">
+
+                    <div class="single-box">
+                        <div class="top-piece">
+                            <img src="./assets/img/business-feature-switching-tools.png" alt="">
+                        </div>
+                        <div class="bottom-piece">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>
+                                Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="single-box">
+                        <div class="top-piece">
+                            <img src="./assets/img/business-feature-send-files-it.png" alt="">
+                        </div>
+                        <div class="bottom-piece">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>
+                                Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="single-box">
+                        <div class="top-piece">
+                            <img src="./assets/img/business-feature-coordinate-it.png" alt="">
+                        </div>
+                        <div class="bottom-piece">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>
+                                Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="single-box">
+                        <div class="top-piece">
+                            <img src="./assets/img/business-feature-integrations-it.png" alt="">
+                        </div>
+                        <div class="bottom-piece">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>
+                                Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="single-box">
+                        <div class="top-piece">
+                            <img src="./assets/img/business-feature-multi-device.png" alt="">
+                        </div>
+                        <div class="bottom-piece">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>
+                                Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="single-box">
+                        <div class="top-piece">
+                            <img src="./assets/img/business-feature-security.png" alt="">
+                        </div>
+                        <div class="bottom-piece">
+                            <h3>Passa di meno da uno strumento all'altro</h3>
+                            <p>
+                                Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+
+        <!-- Sixth section -->
+
+        <section class="section-6">
+
+            <div class="center container-size">
+                <h2 class="big-font">Più di 500.000 team utilizzano<br>
+                Dropbox Business</h2>
+                <div class="margin-50">
+                    <a href="#">Scopri di più sui nostri clienti</a>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- Seventh section -->
+
+        <section class="section-7 flex">
+
+            <div class="container left-container flex">
+                <div class="square square-1">
+                    <img src="./assets/img/designit.svg" alt="" height="40px">
+                </div>
+                <div class="square square-2">
+                    <img src="./assets/img/arizona_state_university.svg" alt="" height="50px">
+                </div>
+                <div class="square square-3"></div>
+                <div class="square square-4"></div>
+            </div>
+
+            <div class="container center-container small-font">
+                <img src="./assets/img/designit.svg" alt="" height="60px">
+                <hr>
+                <p>
+                    “Il membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper”.
+                </p>
+                <p class="margin-30">
+                    Morten Thomsen, Global IT Lead
+                </p>
+            </div>
+
+            <div class="container right-container flex">
+                <div class="square square-5"></div>
+                <div class="square square-6"></div>
+                <div class="square square-7"></div>
+                <div class="square square-8"></div>
+            </div>
+
         </section>
 
     </main>
