--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </p>
                         <button class="button-blue">Inizia la tua prova gratuita</button>
                         <p class="margin-20 small-font">Annulla in qualsiasi momento</p>
-                        <i class="fa-solid fa-arrow-down"></i>
+                        <a href="#titolo"><i class="fa-solid fa-arrow-down"></i></a>
                     </div>
                     <div>
                         <img src="./assets/img/jumbo.png" alt="" height="320px">
@@ -77,7 +77,7 @@
             <div class="center container-size container-2 small-font">
 
                 <div class="margin-50">
-                    <h2 class="big-font margin-50">Trova il piano business che fa per te</h2>
+                    <h2 class="big-font margin-50" id="titolo">Trova il piano business che fa per te</h2>
                     <span class="selection">
                         <div class="circle circle-1"></div>
                         Fatturazione mensile
@@ -92,7 +92,7 @@
 
                     <!-- Column-1 -->
 
-                    <div class="column flex-basis">
+                    <div class="column">
 
                         <div class="part-top padding-10">
                             <i class="fa-solid fa-user"></i>
@@ -162,7 +162,7 @@
 
                     <!-- Column-2 -->
 
-                    <div class="column flex-basis">
+                    <div class="column">
 
                         <div class="part-top padding-10">
                             <i class="fa-solid fa-users"></i>
@@ -245,7 +245,7 @@
 
                     <!-- Column-3 -->
 
-                    <div class="column flex-basis">
+                    <div class="column">
 
                         <div class="part-top padding-10">
                             <i class="fa-solid fa-building"></i>
@@ -481,10 +481,14 @@
                     <img src="./assets/img/designit.svg" alt="" height="40px">
                 </div>
                 <div class="square square-2">
-                    <img src="./assets/img/arizona_state_university.svg" alt="" height="50px">
+                    <img src="./assets/img/arizona_state_university.svg" alt="" height="80px">
                 </div>
-                <div class="square square-3"></div>
-                <div class="square square-4"></div>
+                <div class="square square-3">
+                    <img src="./assets/img/university_of_florida.svg" alt="" height="25px">
+                </div>
+                <div class="square square-4">
+                    <img src="./assets/img/topps.svg" alt="" height="50px">
+                </div>
             </div>
 
             <div class="container center-container small-font">
@@ -499,17 +503,129 @@
             </div>
 
             <div class="container right-container flex">
-                <div class="square square-5"></div>
-                <div class="square square-6"></div>
-                <div class="square square-7"></div>
-                <div class="square square-8"></div>
+                <div class="square square-5">
+                    <img src="./assets/img/world_bicycle_relief.svg" alt="" height="40px">
+                </div>
+                <div class="square square-6">
+                    <img src="./assets/img/hearst_corp.svg" alt="" height="15px">
+                </div>
+                <div class="square square-7">
+                    <img src="./assets/img/lonely_planet.svg" alt="" height="55px">
+                </div>
+                <div class="square square-8">
+                    <img src="./assets/img/clear_channel.svg" alt="" height="65px">
+                </div>
+            </div>
+
+        </section>
+
+        <!-- Eighth section -->
+
+        <section class="section-8">
+
+            <div class="center container-size flex flex-between">
+                <div class=" case case-1">
+                    <h2 class="big-font">Porta Dropbox Business nella tua azienda</h2>
+                </div>
+                <div class="case case-2">
+                    <button class="button-white">Inizia la tua prova gratuita</button>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- Ninth section -->
+
+        <section class="section-9">
+
+            <div class="general-box center container-size padding-100">
+                <h2>Domande frequenti</h2>
+                <div>
+                    <p><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></p>
+                    <i class="fa-solid fa-chevron-down"></i>
+                    <p class="invisible">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea quos quibusdam ullam voluptate cumque quo animi explicabo, minus ipsa blanditiis, enim ipsum dignissimos praesentium ab at sunt dicta libero in.</p>
+                </div>
+                <div>
+                    <p><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></p>
+                    <i class="fa-solid fa-chevron-down"></i>
+                    <p class="invisible">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea quos quibusdam ullam voluptate cumque quo animi explicabo, minus ipsa blanditiis, enim ipsum dignissimos praesentium ab at sunt dicta libero in.</p>
+                </div>
+                <div>
+                    <p><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></p>
+                    <i class="fa-solid fa-chevron-down"></i>
+                    <p class="invisible">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea quos quibusdam ullam voluptate cumque quo animi explicabo, minus ipsa blanditiis, enim ipsum dignissimos praesentium ab at sunt dicta libero in.</p>
+                </div>
             </div>
 
         </section>
 
     </main>
 
-    <footer></footer>
+    <!-- Footer -->
+
+    <footer>
+
+        <div class="cols center flex flex-between">
+            <div>
+                <ul>
+                    <h3 class="padding-top">Dropbox</h3>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <h3 class="padding-top">Prodotti</h3>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <h3 class="padding-top">Azienda</h3>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <h3 class="padding-top">Supporto</h3>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <h3 class="padding-top">Community</h3>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="center last-box">
+            <hr>
+            <i class="fa-solid fa-earth-americas small-font"></i>
+            <span class="small-font">Italiano</span>
+            <i class="fa-solid fa-caret-up small-font"></i>
+        </div>
+
+    </footer>
 
 </body>
 
